--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -663,6 +663,14 @@ input, select, textarea {
 			border-radius: 4px;
 			display: block;
 		}
+		
+		.image.person img {
+			border-radius: 50%;
+			width: 30%;
+			height: 30%;
+			object-fit: cover;
+			box-shadow: 0 0 10px rgba(0,0,0,0.2);
+		}
 
 		.image.left, .image.right {
 			max-width: 40%;
@@ -1140,9 +1148,12 @@ input, select, textarea {
 			-ms-transition-delay: 0.75s;
 			transition-delay: 0.75s;
 			background-image: linear-gradient(to top, rgba(19, 21, 25, 0.5), rgba(19, 21, 25, 0.5)), url("../../images/overlay.png");
-			background-size: auto, 256px 256px;
-			background-position: center, center;
-			background-repeat: no-repeat, repeat;
+			background-size: auto,
+ 256px 256px;
+			background-position: center,
+ center;
+			background-repeat: no-repeat,
+ repeat;
 			z-index: 2;
 		}
 
@@ -1656,3 +1667,50 @@ input, select, textarea {
 		body.is-preload #footer {
 			opacity: 0;
 		}
+		/*team member*/
+		.person-list {
+			display: flex;
+			flex-direction: column;
+			gap: 2.5em;
+		}
+
+		.person-item {
+			display: flex;
+			align-items: center;
+			gap: 2em;
+		}
+
+		.person-avatar {
+			width: 120px;
+			height: 120px;
+			flex-shrink: 0;
+			border-radius: 50%;
+			overflow: hidden;
+			background-color: #2c2f44; /* 背景一致 */
+		}
+
+		.person-avatar img {
+			width: 100%;
+			height: 100%;
+			object-fit: cover;
+		}
+
+		.person-info h3 {
+			margin: 0 0 0.5em 0;
+		}
+
+		.person-info p {
+			margin-bottom: 0.8em;
+		}
+
+		@media screen and (max-width: 600px) {
+		.person-item {
+			flex-direction: column;
+			align-items: flex-start;
+		}
+
+		.person-avatar {
+			margin-bottom: 1em;
+		}
+		}
+
